<resources>
    <string name="app_name">The Gao1</string>

    <string-array name="GaoName">
        <item>Select Gao </item>
        <item>Palakhed</item>
        <item>Chargao</item>
        <item>Saori</item>
        <item>Mohkhed</item>
        <item>Mahelpur</item>
        <item>Rajada </item>
        <item>Badnur</item>
        <item>Jhalakui</item>
        <item>Temeni</item>
        <item>Ponar</item>
        <item>Gubrel</item>

    </string-array>
    <string name="title_activity_public_login">PublicLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">notification</string>
    <string name="home">home</string>
    <string name="profile">Profile</string>
    <string name="about" />
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_email">Update Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_notice">Send Notice</string>
    <string name="write_notice">Write Notice</string>
    <string name="email_adresss">Email Adresss</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="PHONE_EXP">([9876]{1})(\\d{1})(\\d{8})</string>
    <string name="EMAIL_EXP">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="sarpanch_password_reset">Sarpanch Password Reset</string>
    <string name="enter_user_id">Enter User-ID</string>
    <string name="loading">loading</string>
    <string name="notificationbar">Notification ok</string>
    <string name="name">Name :</string>
    <string name="Select_School">Select Your School</string>


</resources>