<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:alphabeticShortcut="r"
        android:icon="@drawable/refresh"
        android:orderInCategory="1"
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_update_profile"
        android:title="@string/update_profile" />

    <item
        android:id="@+id/menu_update_email"
        android:title="@string/update_email" />

    <item
        android:id="@+id/menu_password_change"
        android:title="@string/change_password" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout" />




</menu>