<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssocUser.SarpanchWork.SarpanchLogin">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:src="@drawable/sarpanchdashboard"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_1sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_221sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/enter_user_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_50sdp"
                    android:drawableLeft="@drawable/ic_phone_icon"
                    android:drawablePadding="10dp"
                    android:id="@+id/AuserId"
                    android:inputType="textEmailAddress"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:id="@+id/progressBar"
                android:visibility="gone">
            </ProgressBar>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cp2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_221sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                tools:ignore="RtlHardcoded">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Apassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp">

            <Button
                android:id="@+id/AloginBTN"
                android:layout_width="250dp"
                android:layout_height="43dp"
                android:text="Login"
                android:textSize="15sp"
                android:background="@drawable/rounded_btn"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginTop="@dimen/_20sdp">

            <Button
                android:id="@+id/AregisterBtn"
                android:layout_width="200dp"
                android:layout_height="43dp"
                android:text="@string/register"
                android:textSize="15sp"
                android:background="@drawable/rounded_btn"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:id="@+id/PforgotPwd"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/sarpanch_password_reset"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="right"
            android:gravity="center"
            tools:ignore="RtlHardcoded" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@id/progressBar"/>



    </LinearLayout>


</ScrollView>